# neyrobit

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  integrate_nbit_v2.py  llm_psy_bench_report.json  patch_kohya.py  psy_lora_lib.py  pyproject.toml  repair_kohya.py  val_data.npy
blog/: habr_ru.md  medium_en.md
data/: generate_test_data.py
demo_psy/: 05_validate_psy.py  README.md  psy_validation_report.json
docs/: spec.md
examples/: 02_llm_compression.py  03_psy_self_model.py  04_surprise_kick.py  05_validate_psy.py  06_ab_test_lora.py  06_lora_quality_test.py  07_llm_quality_bench.py  08_validate_llm_surprise.py  basic_usage.py  train_llm_psy.py  train_llm_psy_final.py
include/: neurobit.h
python/: bindings.cpp
python/neyrobit.egg-info/: PKG-INFO  SOURCES.txt
src/: adaptive_quantizer.cpp  cuda_decompress.cu  file_io.cpp  neurobit.cpp  psy_core.cpp  simd_kernels.cpp
tests/: benchmark_suite.py  test_adaptive.py  test_basic.py  test_stage2.py
