[build-system]
requires = ["setuptools>=61.0", "cmake>=3.18", "pybind11>=2.12.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neyrobit"
version = "1.0.0"
description = "Psi-Compress: High-performance neuro-symbolic compression engine."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Kanan Musaev Yagub oqli"}
]
dependencies = [
    "numpy>=1.20.0",
    "torch>=2.0.0",
    "transformers>=4.30.0"
]

[project.urls]
Homepage = "https://github.com/KennyBoss/neyrobit"
Issues = "https://github.com/KennyBoss/neyrobit/issues"

[tool.setuptools]
packages = ["neurobit"]
package-dir = {"" = "python"}
include-package-data = true
